apps/opensearch-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-opensearch-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - hosts:
    - opensearch.corus-ai.net
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - opensearch.corus-ai.net
    port:
      name: opensearch
      number: 9200
      protocol: TCP
  - hosts:
    - opensearch.corus-ai.net
    port:
      name: opensearch-dashboard
      number: 5601
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-opensearch
  namespace: opensearch
spec:
  hosts:
  - 'opensearch.corus-ai.net'
  gateways:
  - istio-system/istio-opensearch-gateway
  - mesh # applies to all the sidecars in the mesh
  tcp:
  - match:
    - port: 9200
    route:
    - destination:
        host: opensearch-cluster-master.opensearch.svc.cluster.local
        port:
          number: 9200
  - match:
    - port: 5601
    route:
    - destination:
        host: opensearch-dashboards.opensearch.svc.cluster.local
        port:
          number: 5601
  http:
  - match:
    # - headers:
    #     cookie:
    #       regex: "^(.*?;)?(user=dev-123)(;.*)?"
    - uri:
        prefix: /opensearch/engine/
    - uri:
        prefix: /opensearch/engine
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 9200
        host: opensearch-cluster-master.opensearch.svc.cluster.local
  - match:
    # - headers:
    #     cookie:
    #       regex: "^(.*?;)?(user=dev-123)(;.*)?"
    - uri:
        prefix: /opensearch/dashboard/
    - uri:
        prefix: /opensearch/dashboard
    # rewrite:
    #   uri: "/"
    route:
    - destination:
        port:
          number: 5601
        host: opensearch-dashboards.opensearch.svc.cluster.local

  # tls:
  # - match:
  #   - port: 443
  #     sniHosts:
  #     - opensearch.corus-ai.net
  #   - uri:
  #       prefix: /opensearch/dashboard/
  #   - uri:
  #       prefix: /opensearch/dashboard
  #   route:
  #   - destination:
  #       host: opensearch-cluster-master.opensearch.svc.cluster.local
  # - match:
  #   - port: 443
  #     sniHosts:
  #     - opensearch.corus-ai.net
  #   route:
  #   - destination:
  #       host: reviews.prod.svc.cluster.local
