apps/redis-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-redis-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - hosts:
    - redis.corus-ai.net
    - redis.dev.corus-ai.net
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - redis.corus-ai.net
    - redis.dev.corus-ai.net
    port:
      name: redis
      number: 6379
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-redis
  namespace: redis
spec:
  hosts:
  - 'redis.corus-ai.net'
  - 'redis.dev.corus-ai.net'
  gateways:
  - istio-system/istio-redis-gateway
  - mesh # applies to all the sidecars in the mesh
  tcp:
  - match:
    - port: 6379
    route:
    - destination:
        host: redis-master.redis.svc.cluster.local
        port:
          number: 6379
  # tls:
  # - match:
  #   - port: 443
  #     sniHosts:
  #     - opensearch.corus-ai.net
  #   - uri:
  #       prefix: /opensearch/dashboard/
  #   - uri:
  #       prefix: /opensearch/dashboard
  #   route:
  #   - destination:
  #       host: opensearch-cluster-master.opensearch.svc.cluster.local
  # - match:
  #   - port: 443
  #     sniHosts:
  #     - opensearch.corus-ai.net
  #   route:
  #   - destination:
  #       host: reviews.prod.svc.cluster.local
